--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -277,7 +277,7 @@
     color: var(--tertiary);
 }
 
-.dark .toc {
+[data-theme="dark"] .toc {
     background: var(--entry);
 }
 
