--- a/assets/css/core/theme-vars.css
+++ b/assets/css/core/theme-vars.css
@@ -30,7 +30,7 @@
     --marginleft: 26px;
 }
 
-.dark {
+:root[data-theme="dark"] {
     --theme: rgb(29, 30, 32);
     --entry: rgb(46, 46, 51);
     --primary: rgb(218, 218, 219);
@@ -46,6 +46,6 @@
     background: var(--code-bg);
 }
 
-.dark.list {
+[data-theme="dark"] .list {
     background: var(--theme);
 }
